increase position to avoid overlap with mobile bottom bar

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -15,7 +15,7 @@
   bottom: 0;
   position: fixed;
   width: 100vw;
-  height: 10vh;
+  height: 20vh;
   animation: animate-fade;
   animation-duration: 0.5s;
 }
@@ -78,7 +78,7 @@
 .fk-d-menu:has(.quote-button) {
   width: 100%;
   max-width: 100vw !important;
-  bottom: 5vh;
+  bottom: 10vh;
   top: unset !important;
   left: 0 !important;
   transform-origin: none !important;
